arreglo de ruta a los estilos

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body class="font-principal bg-Color-principal text-[#fff]">
     
@@ -66,7 +66,7 @@
             <h2 class="text-2xl font-bold mb-5 md:text-3xl">Proyectos</h2>
             <div class="flex flex-col gap-10 md:flex-row md:flex-wrap md:justify-center">
                 <article class="shadow-[0px_0px_12px_-4px_#303030] max-w-xs rounded-2xl overflow-hidden bg-[#303030] self-center flex flex-col h-[400px]">
-                    <img src="./images/imagenes-proyectos/landing.png" class="h-48 w-full object-cover" title="landing page">
+                    <img src="images/imagenes-proyectos/landing.png" class="h-48 w-full object-cover" title="landing page">
                     <div class="px-3 py-5 text-wrap flex flex-col space-y-2 flex-grow">
                         <h2 class="text-center text-lg">Landing Page</h2>
                         <p class="text-slate-300 text-sm flex-grow">Landing page responsive diseñada para adaptarse a diferentes dispositivos, creada utilizando Tailwind CSS.</p>
@@ -159,6 +159,6 @@
         emailjs.init('u66HdWAd1ruwqexaR')
     </script>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
