cambio de nombre de la página y actualizacón en cv

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Portafolio</title>
+    <title>JosueHP</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -107,7 +107,7 @@
 
     <section class="contenedor py-12" id="habilidades">
         <h2 class="text-2xl font-bold mb-5 md:text-3xl">Habilidades</h2>
-        <div class="flex flex-wrap justify-around">
+        <div class="flex flex-wrap justify-around gap-y-3">
             <img src="./images/habilidades/html.svg" alt="logo HTML" class="size-20">
             <img src="./images/habilidades/css3.svg" alt="logo CSS" class="size-20">
             <img src="./images/habilidades/javascript-js.svg" alt="logo JavaScript" class="size-20">
