implementación de la habiliodad react y cambio de icono de sql

--- a/public/index.html
+++ b/public/index.html
@@ -116,9 +116,10 @@
             <img src="./images/habilidades/html.svg" alt="logo HTML" class="size-20">
             <img src="./images/habilidades/css3.svg" alt="logo CSS" class="size-20">
             <img src="./images/habilidades/javascript-js.svg" alt="logo JavaScript" class="size-20">
+            <img src="./images/habilidades/react-javascript-js-framework-facebook-svgrepo-com.svg" alt="logo react" class="size-20">
             <img src="./images/habilidades/tailwindcss-icon.svg" alt="logo Tailwind" class="size-20">
             <img src="./images/habilidades/csharp-original.svg" alt="logo csharp" class="size-20">
-            <img src="./images/habilidades/sql-database-generic.svg" alt="logo sql" class="size-20">
+            <img src="./images/habilidades/sql-database-generic-svgrepo-com.svg" alt="logo sql" class="size-20">
             <img src="./images/habilidades/file-type-git.svg" alt="logo git" class="size-20">
             <img src="./images/habilidades/docker.svg" alt="logo docker" class="size-20">
             <img src="./images/habilidades/jira.svg" alt="logo jira" class="size-20">
